--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^46.0.21",
     "expo-blur": "~11.2.0",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.14.7",
     "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -23,8 +25,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
-    "sanitizer": "^0.1.3",
-    "expo-updates": "~0.14.7"
+    "sanitizer": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
