--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^46.0.21",
     "expo-blur": "~11.2.0",
+    "expo-calendar": "~10.3.0",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.14.7",
@@ -21,13 +22,13 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1298.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
-    "sanitizer": "^0.1.3",
-    "expo-calendar": "~10.3.0"
+    "sanitizer": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
